tests/ui/numbers-arithmetic/issue-8460-const.opt.stderr
error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:11:13
   |
LL |             isize::MIN / -1;
   |             ^^^^^^^^^^^^^^^ attempt to compute `isize::MIN / -1_isize`, which would overflow
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:18:13
   |
LL |             i8::MIN / -1;
   |             ^^^^^^^^^^^^ attempt to compute `i8::MIN / -1_i8`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:25:13
   |
LL |             i16::MIN / -1;
   |             ^^^^^^^^^^^^^ attempt to compute `i16::MIN / -1_i16`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:32:13
   |
LL |             i32::MIN / -1;
   |             ^^^^^^^^^^^^^ attempt to compute `i32::MIN / -1_i32`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:39:13
   |
LL |             i64::MIN / -1;
   |             ^^^^^^^^^^^^^ attempt to compute `i64::MIN / -1_i64`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:46:13
   |
LL |             i128::MIN / -1;
   |             ^^^^^^^^^^^^^^ attempt to compute `i128::MIN / -1_i128`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:53:13
   |
LL |             1isize / 0;
   |             ^^^^^^^^^^ attempt to divide `1_isize` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:60:13
   |
LL |             1i8 / 0;
   |             ^^^^^^^ attempt to divide `1_i8` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:67:13
   |
LL |             1i16 / 0;
   |             ^^^^^^^^ attempt to divide `1_i16` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:74:13
   |
LL |             1i32 / 0;
   |             ^^^^^^^^ attempt to divide `1_i32` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:81:13
   |
LL |             1i64 / 0;
   |             ^^^^^^^^ attempt to divide `1_i64` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:88:13
   |
LL |             1i128 / 0;
   |             ^^^^^^^^^ attempt to divide `1_i128` by zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:95:13
   |
LL |             isize::MIN % -1;
   |             ^^^^^^^^^^^^^^^ attempt to compute the remainder of `isize::MIN % -1_isize`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:102:13
   |
LL |             i8::MIN % -1;
   |             ^^^^^^^^^^^^ attempt to compute the remainder of `i8::MIN % -1_i8`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:109:13
   |
LL |             i16::MIN % -1;
   |             ^^^^^^^^^^^^^ attempt to compute the remainder of `i16::MIN % -1_i16`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:116:13
   |
LL |             i32::MIN % -1;
   |             ^^^^^^^^^^^^^ attempt to compute the remainder of `i32::MIN % -1_i32`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:123:13
   |
LL |             i64::MIN % -1;
   |             ^^^^^^^^^^^^^ attempt to compute the remainder of `i64::MIN % -1_i64`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:130:13
   |
LL |             i128::MIN % -1;
   |             ^^^^^^^^^^^^^^ attempt to compute the remainder of `i128::MIN % -1_i128`, which would overflow

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:137:13
   |
LL |             1isize % 0;
   |             ^^^^^^^^^^ attempt to calculate the remainder of `1_isize` with a divisor of zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:144:13
   |
LL |             1i8 % 0;
   |             ^^^^^^^ attempt to calculate the remainder of `1_i8` with a divisor of zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:151:13
   |
LL |             1i16 % 0;
   |             ^^^^^^^^ attempt to calculate the remainder of `1_i16` with a divisor of zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:158:13
   |
LL |             1i32 % 0;
   |             ^^^^^^^^ attempt to calculate the remainder of `1_i32` with a divisor of zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:165:13
   |
LL |             1i64 % 0;
   |             ^^^^^^^^ attempt to calculate the remainder of `1_i64` with a divisor of zero

error: this operation will panic at runtime
  --> $DIR/issue-8460-const.rs:172:13
   |
LL |             1i128 % 0;
   |             ^^^^^^^^^ attempt to calculate the remainder of `1_i128` with a divisor of zero

error: aborting due to 24 previous errors

